# Poetry-project-template

./: .gitattributes  .gitignore  Dockerfile  Makefile  pyproject.toml  setup.cfg
